--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@ align:center;">Book Your Table</m></caption><br><br>
 <option>Table11</option>
 </select><br><br>
 <label style="background-color:#DC2525;padding:8px">Check Availability</label><br><br> 
-<label><pre></pre><button>Reset</button>             <button class="z">Submit</button></pre>/label>
+<label><pre></pre><button>Reset</button>             <button class="z">Submit</button></pre></label>
 </fieldset>
 </form></center>
  <br>
