--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
 <head>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" 
->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 <style>
 body{
 background-image:linear-gradient(390deg,purple,blue,pink,orange);
@@ -181,19 +180,12 @@ color:black;
 </nav>
 <div class="container">
 <div>
-<span style="font-size:50px;color:darkred;font-family:Castellar">Blossom Brew</span><br><br><span 
-
-style="font-size:20px;color:#640D5F;"> Start your day with this Purrfect Sips!<br><br><span style="font-
-
-size:20px">"Welcome,Caffeine lover!,Have a pleasure day"<br><br><button>Order 
-
-Now</button><button>Contact Us</button>        
+<span style="font-size:50px;color:darkred;font-family:Castellar">Blossom Brew</span><br><br><span style="font-size:20px;color:#640D5F;"> Start your day with this Purrfect Sips!<br><br><span style="font-
+size:20px">"Welcome,Caffeine lover!,Have a pleasure day"<br><br><button>Order Now</button><button>Contact Us</button>        
 </div>
 <div>
 <img  class="im" src="https://media.istockphoto.com/id/880720550/photo/coffee-cup-coffee-beans.jpg?
-
 s=612x612&w=0&k=20&c=Hys1kwquSclobkzG_vUpPg2k9p2xzAsVY8-YaxzstBo="width="450px" 
-
 height="300px">
 </div>
 </div>
@@ -201,94 +193,58 @@ height="300px">
 <div class="about">
 <div>
 <img src="https://media.istockphoto.com/id/947152666/photo/embraced-couple-in-love-communicating-
-
 during-coffee-time-in-the-kitchen.jpg?s=612x612&w=0&k=20&c=k_MDaH7APp6R24VMA3udVP_kKLbY23-
-
 TtWnSBFdunew=">
 </div>
 <div>
 <span  class="span"><u>ABOUT US</u></span><br><br>Brew Coffee Shop is a cozy corner for coffee 
-
 lovers,where every cup is crafted with passion and freshness.Perfect Place for a casual chat and chill place 
-
 to visit.Our space is designed to be warm and inviting ,From rich expressos to smooth lattes,we serve blends 
-
-that awaken your senses.!! <br><br><pre>		   <i  style="color:pink"class="fa fa-
-
-instagram">	 </i><i  style="color:blue"class="fa fa-facebook"></i>  <i  style="color:green"class="fa 
-
+that awaken your senses.!! <br><br><pre>		   <i  style="color:pink"class="fa fa-instagram">	 </i><i  style="color:blue"class="fa fa-facebook"></i>  <i  style="color:green"class="fa 
 fa-whatsapp"></i></pre>
 </div>
 </div><br><br>
-
 <p style="text-align:center;color:white;font-size:30px"><u>Our Menu</u></p><br><br>
 <div class="menu">
 <div class="card">
 <img src="https://media.istockphoto.com/id/1142411258/photo/how-to-make-coffee-latte-art.jpg?
-
 s=612x612&w=0&k=20&c=6mV2KezSqtmnbT2NTl6_wZYRECu2MpRLdsO7Hf-xriE="width="100px" 
-
 height="160px"><br><br>
 <b>Hot Beverages</b>
 <p>"Warming hearts,happiness in a sip"</p>
 </div>
 <div class="card">
 <img src="https://media.istockphoto.com/id/1491178270/photo/cocktail.jpg?
-
-s=612x612&w=0&k=20&c=OlmqKmv_CctptJHWYmNAI0fg6jaUeUKlCXjWOQSGxkM=" width="100px" 
-
-height="160px"><br><br>
+s=612x612&w=0&k=20&c=OlmqKmv_CctptJHWYmNAI0fg6jaUeUKlCXjWOQSGxkM=" width="100px" height="160px"><br><br>
 <b>Cold Beverages</b>
 <p>"Chill your day with a splash of refreshments."</p>
 </div>
 <div class="card">
 <img src="https://media.istockphoto.com/id/1287491261/photo/two-glasses-of-blueberry-smoothie-on-
-
-wooden-background-selective-focus.jpg?s=612x612&w=0&k=20&c=zxfD6jbO2pco9Q1-
-
-xsEpJ_rdg5woOdHooxZb4X02pPA="width="100px" height="160px"><br><br>
+wooden-background-selective-focus.jpg?s=612x612&w=0&k=20&c=zxfD6jbO2pco9Q1-xsEpJ_rdg5woOdHooxZb4X02pPA="width="100px" height="160px"><br><br>
 <b>Milkshakes</b>
 <p>"Sip the sweetness,sweep into happiness."</p>
 </div>
 <div class="card">
-<img src="https://media.istockphoto.com/id/1187469176/photo/portion-of-french-fries-with-mayonnaise-
-
-ketchup-mustard-and-soda.jpg?
-
-s=612x612&w=0&k=20&c=5HCXwnv8cMAS2Pa_4MKC4am59ATlUuSgyIB6g3zcP_4="width="100px" 
-
-height="160px"><br><br>
+<img src="https://media.istockphoto.com/id/1187469176/photo/portion-of-french-fries-with-mayonnaise-ketchup-mustard-and-soda.jpg?s=612x612&w=0&k=20&c=5HCXwnv8cMAS2Pa_4MKC4am59ATlUuSgyIB6g3zcP_4="width="100px" height="160px"><br><br>
 <b>The Combos</b>
 <p>"Yur favourites,better together"</p>
 </div>
 <div class="card">
-<img src="https://media.istockphoto.com/id/2157936579/photo/cheery-cake.jpg?
-
-s=612x612&w=0&k=20&c=nKshiC62MA6PPgGdhjW2Y4dYJ-XiqWj_hJTumoIavus="width="120px" 
-
-height="160px"><br><br>
+<img src="https://media.istockphoto.com/id/2157936579/photo/cheery-cake.jpg?s=612x612&w=0&k=20&c=nKshiC62MA6PPgGdhjW2Y4dYJ-XiqWj_hJTumoIavus="width="120px" height="160px"><br><br>
 <b>Pastries</b>
 <p>"Bite into bliss,with every layer"</p>
 </div>
 <div class="card">
-<img src="https://media.istockphoto.com/id/531464020/photo/beef-steaks-on-the-grill.jpg?
-
-s=612x612&w=0&k=20&c=bGH-BIOJULADBnyfCiEs5nbM1gWYHKr1UiSDbPn_vZY="width="120px" 
-
-height="160px"><br><br>
+<img src="https://media.istockphoto.com/id/531464020/photo/beef-steaks-on-the-grill.jpg?s=612x612&w=0&k=20&c=bGH-BIOJULADBnyfCiEs5nbM1gWYHKr1UiSDbPn_vZY="width="120px" height="160px"><br><br>
 <b>Barbecue</b>
 <p>"Summer nights and BBQ delights"</p>
 </div>
 </div><br><br><br>
-
 <p style="text-align:center;color:white;font-size:30px"><u>Critique</u></p>
 <div class="test">
 <div class="card1">
-<img src="https://media.istockphoto.com/id/917957418/photo/beauty-business-asian-women-holding-sale-
-
-report-and-looking-in-copy-space.jpg?
-
-s=612x612&w=0&k=20&c=o7Qj9JQBPmTC1vzj6VITzzGhYT2Qj38p6SVrHNx7BMk="><br><br><b>Elsaa</b>
+<img src="https://media.istockphoto.com/id/917957418/photo/beauty-business-asian-women-holding-sale-report-and-looking-in-copy-space.jpg?s=612x612&w=0&k=20&c=o7Qj9JQBPmTC1vzj6VITzzGhYT2Qj38p6SVrHNx7BMk="><br><br><b>Elsaa</b>
 <p>"The chicken had a perfect crispy crust with a nice balance of spices.</p>
 </div>
 <div class="card1">
@@ -310,9 +266,7 @@ s=612x612&w=0&k=20&c=DPDY0l0LM1wUe37UufUEQ0pnfLcP3dobO26CO6zM_ls="><br><br>
 delicious."</p>
 </div>
 <div class="card1">
-<img src="https://media.istockphoto.com/id/1179017733/photo/one-female-student.jpg?
-
-s=612x612&w=0&k=20&c=In1BkTZwKCgBa9eQ7iSb2Opae8FTbO5hiEYoD9IgXOA="><br><br>
+<img src="https://media.istockphoto.com/id/1179017733/photo/one-female-student.jpg?s=612x612&w=0&k=20&c=In1BkTZwKCgBa9eQ7iSb2Opae8FTbO5hiEYoD9IgXOA="><br><br>
 <b>Aishique</b>
 <p>"The Mockapolitan was a delightful surprise! while the subtle sweetness of the berries  awesome"</p>
 </div>
@@ -320,56 +274,18 @@ s=612x612&w=0&k=20&c=In1BkTZwKCgBa9eQ7iSb2Opae8FTbO5hiEYoD9IgXOA="><br><br>
 <br>
 <p style="color:white;font-size:30px;text-align:center"><u>GALLERY</u></p>
 <div class="gallery">
-<div><img src="https://media.istockphoto.com/id/1786292493/photo/chocolate-espresso-coffee-mousse-
-
-dessert-cup-with-whipped-cream-and-cinnamon.jpg?
-
-s=612x612&w=0&k=20&c=B4KHULtMDO9v9GNzLEjlH2O005cpwRw4boITM-uRWbk="></div>
-<div><img src="https://media.istockphoto.com/id/2169085643/photo/chocolate-drink-with-whipped-cream-
-
-and-pieces-of-dark-chocolate.jpg?
-
-s=612x612&w=0&k=20&c=wn2Lf2Jz9sId0shd4tkvd4ITmA4YA6CbJ_7Na054hoI="></div>
-<div><img src="https://media.istockphoto.com/id/1405558493/photo/delicious-coffee-with-whipped-cream-in-
-
-a-glass.jpg?s=612x612&w=0&k=20&c=_56D_ikC04iK5wSW63z_ln9z9as2D03dbIHvpFRJieE="></div>
-<div><img src="https://media.istockphoto.com/id/1264475352/photo/coconut-milk-latte-coffee-decorated-
-
-with-grated-chocolate.jpg?s=612x612&w=0&k=20&c=UgIlTBUmTOuVbk5iFL5Kg5aZkOd-
-
-kLTmC3SCUAXBikI="></div>
-<div><img src="https://media.istockphoto.com/id/1340943085/photo/drinks-with-blur-beach-and-sunset-in-
-
-background.jpg?s=612x612&w=0&k=20&c=-rYQfOks9d555XlSDturGFQWECrtJPub7_NsUgA20uI="></div>
-<div><img src="https://media.istockphoto.com/id/1549118446/photo/healthy-lemonade-with-melon-citrus-
-
-and-crushed-ice.jpg?s=612x612&w=0&k=20&c=vbDrlN7Xmmpa1G-
-
-vmJLOZQYMX7dVj13aZFNuzb8bZEU="></div>
-<div><img src="https://media.istockphoto.com/id/1395736637/photo/spring-or-summer-cold-cocktail-
-
-raspberry-lemonade.jpg?s=612x612&w=0&k=20&c=Eim8oSm-
-
-ycxAVssFPrOVwWpeo6iOaoZkkglKrmbKSk4="></div>
-<div><img src="https://media.istockphoto.com/id/930424466/photo/turmeric-lassie-drink.jpg?
-
-s=612x612&w=0&k=20&c=jRL2bIo0X_pWxXBS7A6-t_gejW5TJFpQMaqZsEy10Wk="></div>
-<div><img src="https://media.istockphoto.com/id/1290556437/photo/cups-printed-on-a-3d-printer-with-
-
-chocolate-whipped-cream-and-mint-leaves.jpg?
-
-s=612x612&w=0&k=20&c=PZG6JEMSL8TkTcAJARA3x4zIPKp5y-LpMDHOrfBHQlQ="></div>
-<div><img src="https://media.istockphoto.com/id/1316957105/photo/coffee-muffins.jpg?
-
-s=612x612&w=0&k=20&c=X19Z0hLgiq0o0ckvya-TFSQfMuUyz62luFbZgRe1FU8="></div>
-<div><img src="https://media.istockphoto.com/id/1396261151/photo/dark-chocolate-irish-coffee-cupcakes-
-
-with-whipped-whiskey-ganache-frosting.jpg?
-
-s=612x612&w=0&k=20&c=9NY4W2e_W7JpmeP4pdmUQJLnkom9BVdGMCk2805JPic="></div>
-<div><img src="https://media.istockphoto.com/id/1481330339/photo/chocolate-cup-cakes-with-tea-pot.jpg?
-
-s=612x612&w=0&k=20&c=8G3Lm5f_3bv4y2FUUKllSRgaW7unmi8UNvbbQEdp0pQ="></div>
+<div><img src="https://media.istockphoto.com/id/1786292493/photo/chocolate-espresso-coffee-mousse-dessert-cup-with-whipped-cream-and-cinnamon.jpg?s=612x612&w=0&k=20&c=B4KHULtMDO9v9GNzLEjlH2O005cpwRw4boITM-uRWbk="></div>
+<div><img src="https://media.istockphoto.com/id/2169085643/photo/chocolate-drink-with-whipped-cream-and-pieces-of-dark-chocolate.jpg?s=612x612&w=0&k=20&c=wn2Lf2Jz9sId0shd4tkvd4ITmA4YA6CbJ_7Na054hoI="></div>
+<div><img src="https://media.istockphoto.com/id/1405558493/photo/delicious-coffee-with-whipped-cream-in-a-glass.jpg?s=612x612&w=0&k=20&c=_56D_ikC04iK5wSW63z_ln9z9as2D03dbIHvpFRJieE="></div>
+<div><img src="https://media.istockphoto.com/id/1264475352/photo/coconut-milk-latte-coffee-decorated-with-grated-chocolate.jpg?s=612x612&w=0&k=20&c=UgIlTBUmTOuVbk5iFL5Kg5aZkOd-kLTmC3SCUAXBikI="></div>
+<div><img src="https://media.istockphoto.com/id/1340943085/photo/drinks-with-blur-beach-and-sunset-in-background.jpg?s=612x612&w=0&k=20&c=-rYQfOks9d555XlSDturGFQWECrtJPub7_NsUgA20uI="></div>
+<div><img src="https://media.istockphoto.com/id/1549118446/photo/healthy-lemonade-with-melon-citrus-and-crushed-ice.jpg?s=612x612&w=0&k=20&c=vbDrlN7Xmmpa1G-vmJLOZQYMX7dVj13aZFNuzb8bZEU="></div>
+<div><img src="https://media.istockphoto.com/id/1395736637/photo/spring-or-summer-cold-cocktail-raspberry-lemonade.jpg?s=612x612&w=0&k=20&c=Eim8oSm-ycxAVssFPrOVwWpeo6iOaoZkkglKrmbKSk4="></div>
+<div><img src="https://media.istockphoto.com/id/930424466/photo/turmeric-lassie-drink.jpg?s=612x612&w=0&k=20&c=jRL2bIo0X_pWxXBS7A6-t_gejW5TJFpQMaqZsEy10Wk="></div>
+<div><img src="https://media.istockphoto.com/id/1290556437/photo/cups-printed-on-a-3d-printer-with-chocolate-whipped-cream-and-mint-leaves.jpg?s=612x612&w=0&k=20&c=PZG6JEMSL8TkTcAJARA3x4zIPKp5y-LpMDHOrfBHQlQ="></div>
+<div><img src="https://media.istockphoto.com/id/1316957105/photo/coffee-muffins.jpg?s=612x612&w=0&k=20&c=X19Z0hLgiq0o0ckvya-TFSQfMuUyz62luFbZgRe1FU8="></div>
+<div><img src="https://media.istockphoto.com/id/1396261151/photo/dark-chocolate-irish-coffee-cupcakes-with-whipped-whiskey-ganache-frosting.jpg?s=612x612&w=0&k=20&c=9NY4W2e_W7JpmeP4pdmUQJLnkom9BVdGMCk2805JPic="></div>
+<div><img src="https://media.istockphoto.com/id/1481330339/photo/chocolate-cup-cakes-with-tea-pot.jpg?s=612x612&w=0&k=20&c=8G3Lm5f_3bv4y2FUUKllSRgaW7unmi8UNvbbQEdp0pQ="></div>
 </div>
 <footer>
 <p style="color:black;font-size:30px;text-align:center"><u>CONTACT US</u></p>
