--- a/index.html
+++ b/index.html
@@ -148,23 +148,6 @@ color:teal;
 border-radius:50%;
 border:3px;
 }
-.z{
-padding:15px;
-border-radius:20%;
-margin-left:5%;
-font-size:10px;
-color:black;
-position:absolute;
-bottom:340%;
-left:37%;
-background:transparent;
-}
-.z:hover{font-size:15px;
-background:transparent;
-box-shadow:8px 7px 6px 7px lightpink;
-cursor:pointer;
-color:black;
-}
 }
 </style>
 <body>
@@ -333,8 +316,7 @@ align:center;">Book Your Table</m></caption><br><br>
 <option>Table11</option>
 </select><br><br>
 <label style="background-color:#DC2525;padding:8px">Check Availability</label><br><br> 
-<label><pre></pre><button>Reset</button>             <button class="z">Submit</button></pre></label>
-</fieldset>
+<label><button> Reset </button></label>
 </form></center>
  <br>
 </div>
